syntax = "proto3";

package antelope.common.v1;

import "google/protobuf/timestamp.proto";

message ActionTraces {
  repeated ActionTrace action_traces = 1;
}

message ActionTrace {
    // trace information
    uint32 block_num = 1;
    google.protobuf.Timestamp timestamp = 2;
    string trx_id = 3;
    uint32 action_ordinal = 4;

    // action
    string account = 11;
    string receiver = 12;
    string name = 13;

    // action data
    string json_data = 20;
}

message DatabaseOperations {
  repeated DatabaseOperation db_ops = 1;
}

message DatabaseOperation {
  // trace information
  uint32 block_num = 1;
  google.protobuf.Timestamp timestamp = 2;
  string trx_id = 3;
  uint32 action_index = 4;

  // database operation
  string code = 10;               // contract name (ex: "eosio.token")
  string table_name = 11;         // table name (ex: "accounts")
  string scope = 12;              // scope name (ex: "EOS")
  string primary_key = 13;        // primary key (ex: "myaccount")

  // table data
  bytes old_data = 20;      // old data (bytes)
  bytes new_data = 21;      // new data (bytes)
}
